[SG-1126] [SG-1832] [SG-1346] [SG-1131] [SG-1790] -- Small css fix tasks
SG-1131 -- Step by step too narrow on mobile. Adjusted widths and spacings on mobile to line up better and provide more space
SG-1126 -- Removed extra padding on the left side of the "Last updated" line.
SG-1832 -- Fixed spacing between the button and text on Campaign spotlight translations. On english the output wraps the text in a P tag. On the translations, there is no wrapping P tag. Css altered to work with or without the tag
SG-1346 -- Removed icons from Contact information on location sidebar
SG-1790 -- Fixed spacing between paragraphs in different sections of the site, where there was no space between multiple paragraphs

--- a/web/themes/custom/sfgovpl/src/sass/_base.scss
+++ b/web/themes/custom/sfgovpl/src/sass/_base.scss
@@ -31,6 +31,10 @@ p {
   margin-top: 1em;
 }
 
+p + p {
+  margin-block-start: 1rem;
+}
+
 h1,
 h2,
 h3,
