--- a/web/themes/custom/sfgovpl/src/sass/node/_node-information.scss
+++ b/web/themes/custom/sfgovpl/src/sass/node/_node-information.scss
@@ -55,6 +55,7 @@
 
   .info--last-updated {
     @include contain-1090;
+    padding-inline: 0;
     font-style: italic;
     color: $c-slate;
     opacity: 0.6;
