--- a/web/themes/custom/sfgovpl/src/sass/node/_node-location.scss
+++ b/web/themes/custom/sfgovpl/src/sass/node/_node-location.scss
@@ -89,6 +89,11 @@
         .sfgov-phone-details {
           opacity: 0.7;
         }
+
+        &[data-contact] {
+          padding-inline-start: 0;
+          background: none;
+        }
       }
     }
 
@@ -151,7 +156,7 @@
         background-color: $c-blue-1;
         border-radius: 8px;
       }
-      
+
       .paragraph--type--people,
       .paragraph--type--profile-group {
         .inner {
@@ -225,7 +230,7 @@
             }
 
             .__operating-hours {
-              margin-top: 1rem; 
+              margin-top: 1rem;
             }
           }
         }
