--- a/web/themes/custom/sfgovpl/src/sass/node/_node-step-by-step.scss
+++ b/web/themes/custom/sfgovpl/src/sass/node/_node-step-by-step.scss
@@ -16,16 +16,24 @@
   }
   .step-by-step-container {
     @include clearfix;
-    margin-left: 23px;
+    margin-left: 17px;
+
+    @include media($sbs-breakpoint) {
+      margin-left: 23px;
+    }
+
     > div {
       display: block;
       float: left;
     }
+
     position: relative;
     border-left: 3px solid $c-slate;
+
     &.last {
       border-left: 3px solid $c-white;
     }
+
     .step-type {
       @include fs-title-5;
       position: absolute;
