--- a/web/themes/custom/sfgovpl/src/sass/node/_node-transaction.scss
+++ b/web/themes/custom/sfgovpl/src/sass/node/_node-transaction.scss
@@ -35,10 +35,15 @@
     .sfgov-things-to-know {
       display: flex;
       flex-wrap: wrap;
+
       .paragraph {
         @include media($narrow-screen) {
           width: 50%;
           padding-right: 60px;
+        }
+
+        p + p {
+          margin-block-start: 1rem;
         }
       }
     }
