--- a/web/themes/custom/sfgovpl/src/sass/paragraphs/_paragraph-campaign-spotlight.scss
+++ b/web/themes/custom/sfgovpl/src/sass/paragraphs/_paragraph-campaign-spotlight.scss
@@ -81,6 +81,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  row-gap: 1.25rem;
   padding: 40px 20px;
   border-radius: 0 8px 8px 0;
 
@@ -89,7 +90,6 @@
     padding: 3rem;
     min-height: 400px;
     margin-left: 50%;
-    padding: 3rem;
 
     .is-reversed & {
       margin-left: 0;
@@ -121,6 +121,14 @@
   .page-campaign-gold &,
   .page-campaign-blue & {
     color: $c-slate;
+  }
+
+  p {
+    margin-block: 0;
+
+    & + p {
+      margin-block-start: 1rem;
+    }
   }
 }
 /* purgecss end ignore */
