--- a/web/themes/custom/sfgovpl/src/sass/paragraphs/_paragraph-document.scss
+++ b/web/themes/custom/sfgovpl/src/sass/paragraphs/_paragraph-document.scss
@@ -44,7 +44,10 @@
     width: 520px;
     vertical-align: top;
     p {
-      margin: 0;
+      margin-block: 0;
+      & + p {
+        margin-block-start: 1rem;
+      }
     }
   }
   .field__items {
