--- a/web/themes/custom/sfgovpl/src/sass/paragraphs/_paragraph-facts.scss
+++ b/web/themes/custom/sfgovpl/src/sass/paragraphs/_paragraph-facts.scss
@@ -79,14 +79,25 @@
         strong {
           font-weight: $fw-medium;
         }
+
+        & + p {
+          margin-block-start: 1rem;
+        }
+
+        &:empty {
+          height: 0;
+          line-height: 0;
+          margin-block-start: 0;
+        }
       }
     }
   }
   @include media($medium-screen) {
     display: grid;
-    grid-template-columns: 32% 32% 32%;
-    column-gap: 20px;
-    row-gap: 60px;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 3rem;
+    row-gap: 4rem;
+
     .fact-item {
       margin-bottom: 0;
       .item-wrapper {
